--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                     experience, and overall efficiency.</p>
             </main>
             <section>
-                <span>
+                <div>
                     <h2>10k+</h2>
                     <p>companies</p>
-                </span>
-                <span>
+                </div>
+                <div>
                     <h2>314</h2>
                     <p>templates</p>
-                </span>
-                <span>
+                </div>
+                <div>
                     <h2>12M+</h2>
                     <p>queries</p>
-                </span>
+                </div>
             </section>
         </div>
 
